--- a/calcul_nounou/templates/register_day.html
+++ b/calcul_nounou/templates/register_day.html
@@ -17,7 +17,7 @@
         <label for="hourOut" class="form-label">Heure départ :</label>
         <input type="time" class="form-control w-50" id="hourOut" name="hourOut">
       </div>
-    <div class="btn btn-primary" onclick="sendNewDay()">Enregistrer</div>
+    <div class="btn btn-primary" onclick="isFormValid()">Enregistrer</div>
   </form>
 
 {% endblock %}
